<resources>
    <string name="app_name">Cogent Codebucket Assignment</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_ul"><u>Sign up</u></string>
    <string name="n_a">N/A</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password_q">Forgot password?</string>
    <string name="or">or</string>
    <string name="sign_up_using">Sign up using</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_ul"><u>Login</u></string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_email">Send email</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="please_enter_valid_email">Please enter your valid email</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_up_using">Login up using</string>
    <string name="_continue">Continue</string>
    <string name="language_preference">Language Preference</string>
    <string name="home">Home</string>
    <string name="my_city">My City</string>
    <string name="articles">Articles</string>
    <string name="live">Live</string>

    <!-- String Array -->
    <string-array name="languageNames">
        <item>English</item>
        <item>Hindi</item>
        <item>Urdu</item>
        <item>Bengali</item>
        <item>Marathi</item>
        <item>Telugu</item>
        <item>Tamil</item>
        <item>Gujarati</item>
        <item>Kannada</item>
        <item>Odia</item>
        <item>Malayalam</item>
        <item>Punjabi</item>
        <item>Assamese</item>
        <item>Dogri</item>
        <item>Nepali</item>
    </string-array>

    <!-- String Array -->
    <string-array name="languageLocalNames">
        <item>English</item>
        <item>हिन्दी</item>
        <item>اُردُو</item>
        <item>বাংলা</item>
        <item>मराठी</item>
        <item>తెలుగు</item>
        <item>தமிழ்</item>
        <item>ગુજરાતી</item>
        <item>ಕನ್ನಡ</item>
        <item>ଓଡ଼ିଆ</item>
        <item>മലയാളം</item>
        <item>ਪੰਜਾਬੀ</item>
        <item>অসমীয়া</item>
        <item>डोगरी</item>
        <item>नेपाली</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome,</string>
    <string name="personalizations">Personalizations</string>
    <string name="notifications">Notifications</string>
    <string name="home_screen_setup">Home screen setup</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="text_size">Text Size</string>
    <string name="settings">Settings</string>
    <string name="share_with">Share with</string>
    <string name="share_link">Share link</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy</string>
    <string name="about_us">About us</string>
    <string name="version">Version <super>(1.0.1)</super></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="sign_out">Sign out</string>
    <string name="a_password_reset_link_will_be_sent_to_your_email_id">A password reset link will be sent to your email id</string>
    <string name="under_development">Under Development</string>
</resources>