<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/standard_layout_padding"
    android:paddingVertical="@dimen/standard_layout_padding_large"
    tools:context=".activities.ResetPasswordActivity">

    <TextView
        android:id="@+id/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/size_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/a_password_reset_link_will_be_sent_to_your_email_id"
        android:textColor="@color/colorGrayLight"
        android:textSize="@dimen/size_tagline_small" />

    <EditText
        android:id="@+id/user_email"
        style="@style/CustomEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_title_bottom"
        android:hint="@string/enter_your_email_id"
        android:inputType="textEmailAddress" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_btn_red_gradient"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/size_txt_regular" />

</LinearLayout>