<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/standard_layout_padding"
        android:paddingVertical="@dimen/standard_layout_padding_large"
        tools:context=".activities.LoginActivity">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/log_in"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/size_title" />


        <EditText
            android:id="@+id/user_email"
            style="@style/CustomEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_title_bottom"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/user_password"
            style="@style/CustomEdittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_fields"
            android:hint="@string/create_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="8dp"
            android:text="@string/forgot_password_q"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/size_txt_small" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_btn_red_gradient"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/size_txt_regular" />

        <include
            android:id="@+id/division_line"
            layout="@layout/layout_division_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_layout_margin_horizontal"
            android:layout_marginTop="@dimen/margin_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login_up_using"
            android:textColor="@color/colorGrayLight"
            android:textSize="@dimen/size_txt_regular" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_fields"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook_signup"
                android:layout_width="@dimen/size_icon_regular"
                android:layout_height="@dimen/size_icon_regular"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_facebook_signup" />

            <ImageView
                android:id="@+id/google_signup"
                android:layout_width="@dimen/size_icon_regular"
                android:layout_height="@dimen/size_icon_regular"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_google_signup" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_dont_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/already_have_an_account"
                android:textColor="@color/colorGrayLight"
                android:textSize="@dimen/size_txt_regular" />

            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_up_ul"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/size_txt_regular" />
        </LinearLayout>

    </LinearLayout>
</layout>